--- a/README.html
+++ b/README.html
@@ -365,38 +365,93 @@ summary {
 </div>
 
 
-<div id="mis-preguntas-de-investigación-esson-las-siguientes" class="section level1">
-<h1>Mi/s pregunta/s de investigación es/son la/s siguiente/s:</h1>
+<div id="mis-preguntas-de-investigación" class="section level1">
+<h1>Mis preguntas de investigación</h1>
+<p>(sustituye los puntos suspensivos por tus respuestas; instrucciones abajo).</p>
+<p>Mi familia de plantas asignada es: …</p>
+<p>Elegí la siguiente combinación de temas/preguntas: …</p>
+<div id="instrucciones" class="section level2">
+<h2>Instrucciones</h2>
+<p><strong>Por José Ramón Martínez Batlle, el tali</strong></p>
+<div id="mensaje-clave" class="section level3">
+<h3>Mensaje clave</h3>
+<p>Trabajarás con los datos censales de la parcela permanente (50-Ha) de BCI del Smithsonian Tropical Research Institute (STRI) y con preguntas previamente formuladas por mí.</p>
+</div>
+<div id="pasos" class="section level3">
+<h3>Pasos</h3>
+<div id="paso-1.-mira-este-vídeo" class="section level4">
+<h4>Paso 1. Mira este <a href="https://www.youtube.com/watch?v=bN54RGtxFeM">vídeo</a></h4>
+<p>El vídeo se titula “Barro Colorado: Un vistazo a la ciencia y los científicos que trabajan en la isla de Barro Colorado”. Aquí el STRI te explica qué es BCI, su historia, el 50-Ha plot y cómo se realizan estudios de fauna.</p>
+</div>
+<div id="paso-2.-mira-este-otro-vídeo" class="section level4">
+<h4>Paso 2. Mira <a href="https://www.youtube.com/watch?v=Hm6yO_V6NUY&amp;list=PLDcT2n8UzsCRDqjqSeqHI1wsiNOqpYmsJ&amp;index=3">este otro vídeo</a></h4>
+<p>Lo titulé “Datos censales de la parcela permanente de 50-Ha de árboles en la isla Barro Colorado (BCI)”, donde explico:</p>
 <ul>
-<li><p>…</p></li>
-<li><p>…</p></li>
-<li><p>…</p></li>
+<li>Características básicas de los datos.</li>
+<li>Cuáles preguntas podrás seleccionar y responder.</li>
+<li>Un resumen de las técnicas disponibles y qué preguntas responde cada una.</li>
 </ul>
 </div>
-<div id="base-común" class="section level1">
-<h1>Base común</h1>
-<p>Formula tu/s pregunta/s de investigación. Ten en cuenta que tu/s pregunta/s debe…</p>
+<div id="paso-3.-identifica-tu-familia-de-plantas" class="section level4">
+<h4>Paso 3. Identifica tu familia de plantas</h4>
+<p>Esto lo harás conmigo. Sin embargo, te dejo algunas notas:</p>
 <ul>
-<li>… poderse responder con un flujo de trabajo definible y temático, basado en el análisis exploratorio de datos, la estadística y la ecología numérica.</li>
-<li>… ser concisa, cero divagación.</li>
-<li>… tener una respuesta alcanzable, nada de preguntas extraordinarias o imposibles de responder en este momento o en esta materia.</li>
+<li><p>Cuando tengas familia asignada, investiga un poco sobre ella. Profundizarás a medida que avances en la redacción del manuscrito.</p></li>
+<li><p>Mayor riqueza de especies no significa mayor complejidad, y viceversa. Traducción: una familia con gran riqueza de especies no necesariamente es más difícil de trabajar.</p></li>
+<li><p>Cuando tengas tu familia asignada, escríbela en el encabezado del repo (sustituye los puntos suspensivos en el lugar correspondiente).</p></li>
 </ul>
 </div>
-<div id="batería-de-preguntas" class="section level1">
-<h1>Batería de preguntas</h1>
-<p>Si te resulta complicado este primer paso, apóyate en esta batería de preguntas. ADAPTA, no hagas copy/paste.</p>
-<p>Aunque dependerá mucho del grupo de seres vivos que elijas, la base común de biodiversidad y distribución de especies estará presente en tu manuscrito. La mayor parte de las preguntas pertenece a uno de esos grupos.</p>
-<p>No se trata de una lista comprehensiva. Las preguntas incluidas aquí son sólo un conjunto de algunas posibles que el tali tiene en su cabeza. Trae las tuyas también, y las discutimos.</p>
-<p>Bueno, la batería de preguntas finalmente:</p>
+<div id="paso-4.-elige-una-combinación-de-temas" class="section level4">
+<h4>Paso 4. “Elige”&quot; una combinación de temas</h4>
+<p>Si ya tienes tu familia de plantas y ya miraste el vídeo <a href="https://www.youtube.com/watch?v=Hm6yO_V6NUY&amp;list=PLDcT2n8UzsCRDqjqSeqHI1wsiNOqpYmsJ&amp;index=3">“Los datos censales de la parcela permanente de 50-Ha de árboles en la isla Barro Colorado (BCI)”</a>, entonces ejecuta este paso.</p>
+<p>Las preguntas se clasifican en cinco temas: medición de asociación, agrupamiento, ordenación, ecología espacial, diversidad. Detallo las preguntas que incluye cada tema a continuación:</p>
+<p>A. Medición de asociación:</p>
 <ul>
-<li><p>¿Existe asociación estadística entre la composición de comunidades de X y el/la Y?</p></li>
-<li><p>¿Se correlaciona la diversidad alpha de X con Y?</p></li>
-<li><p>¿Explica el/la Y la diversidad beta de X?</p></li>
-<li><p>¿Está repartida homogéneamente la diversidad alpha de X en el territorio dominicano? ¿Hay variabilidad por municipios, provincias o regiones? ¿Existen clusters de riqueza?</p></li>
-<li><p>¿Hay indicios de que los registros de ocurrencia de X de los que dispongo están sesgados? ¿Sesgados en qué aspecto? ¿Espacial? ¿Por subgrupo?</p></li>
+<li>¿Se detectan especies asociadas dentro de mi familia seleccionada?</li>
+<li>¿Existe asociación entre variables ambientales/atributos? ¿Cuáles variables?</li>
 </ul>
-<p>X se refiere al grupo elegido.</p>
-<p>Y podría ser muchas cosas. Por ejemplo, podría ser “elevación”, “pendiente”, “relieve” (que es más global), “posición geomorfológica”, “unidad geológica”, “intervención antrópica”, “pérdida de bosque”, “tipo de bosque”, “tipo de cobertura”, “distancia a accesos”, y si sigo por ahí me voy en una y no paro. No es esa una lista exhaustiva de variables, hay muchas más posibles.</p>
+<p>B. Agrupamiento (<em>cluster analysis</em>):</p>
+<ul>
+<li>Los cuadros (o quadrats) de 1 hectárea, ¿se organizan en grupos discontinuos según la composición de las especies de mi familia seleccionada?</li>
+<li>Si existe algún patrón, ¿es consistente con alguna variable ambiental/atributo?</li>
+<li>¿Hay especies indicadoras o con preferencia por determinadas condiciones ambientales/atributos?</li>
+</ul>
+<p>C. Diversidad:</p>
+<ul>
+<li>Según los análisis de estimación de riqueza, ¿está suficientemente representada mi familia? Consideremos como buena representación un 85%</li>
+<li>¿Existe asociación de la diversidad alpha con variables ambientales/atributos? ¿Con cuáles?</li>
+<li>¿Existe contribución local o por alguna especie a la diversidad beta?</li>
+</ul>
+<p>D. Ordenación (<em>ordination analysis</em>):</p>
+<ul>
+<li>En un espacio bidimensional, ¿existen tendencias apreciables de ordenación de las especies de mi familia seleccionada?</li>
+<li>Si existen tendencias de ordenación, ¿se asocian éstas con variables ambientales/atributos?</li>
+</ul>
+<p>E. Ecología espacial:</p>
+<ul>
+<li>¿Alguna(s) especies de mi familia presenta(n) patrón aglomerado? ¿Cuál(es)? ¿Se asocia con alguna variable?</li>
+<li>¿Predicen bien la ocurrencia de dicha(s) especie(s) los modelos de distribución de especies (SDM)?</li>
+</ul>
+<p>A, B y C son temas troncales en ecología numérica que no se pueden obviar, sólo podrás “elegir”&quot; entre combinarlos con ordenación o con ecología espacial. Así, las opciones son éstas:</p>
+<ul>
+<li>ABCD</li>
+<li>ABCE</li>
+</ul>
+<p>Antes de elegir, te recomiendo que profundices sobre qué diferencia a ecología espacial de ordenación. Consulta los vídeos que comienzan por <code>to</code> y <code>ee</code> en <a href="https://www.youtube.com/watch?v=v1EX8OzAyBw&amp;list=PLDcT2n8UzsCRDqjqSeqHI1wsiNOqpYmsJ">esta lista de reproducción</a>.</p>
+<p>Tras elegir, escribe tu opción en el encabezado del repo (sustituye los puntos suspensivos en el lugar correspondiente).</p>
+<p>Existe un conjunto de técnicas denominadas “análisis exploratorio de datos” (AED) que son prescriptivas, y que verás en la lista de reproducción. No responden preguntas, más bien, ayudan a limpiar los datos.</p>
+<p><strong>No olvides hacer commit&gt;push al finalizar.</strong></p>
+</div>
+</div>
+</div>
+<div id="comentario-final" class="section level2">
+<h2>Comentario final</h2>
+<p>TL;DR: porque con la nueva modalidad, no extraerás conclusiones a partir de datos sesgados.</p>
+<p>Intenté que trabajaras con datos que fuesen de interés para ti, porque así la motivación era mayor. Por lo que veo, en GBIF se pueden aprovechar muchos datos, pero sobre todo de plantas, los cuales conozco mejor. Tras las interacciones particulares que he tenido con el grupo, noto que en los datos que me han mostrado, así como en los de fauna en GBIF, hay un sesgo importante (ver algunos de mis comentarios anteriores en el foro ~manuscrito). Veo que las conclusiones que se extraerían con dichos datos serían discutibles y poco útiles, especialmente para el aprendizaje.</p>
+<p>Concretamente, en GBIF me llevé gran sorpresa con casos como Lepidoptera, Coleoptera, y con algunas especies de fauna invasoras. Pienso que los datos de presencia de plantas de GBIF son útiles, pero si vamos a tener que trabajar con plantas, para eso mejor entonces usar los censos de BCI. Esto les permitirá manejar mucho mejor las técnicas cuantitativas en las que les guiaré, con la ventaja de que el sesgo no estará presente.</p>
+<p>Por otra parte, entre los datos e ideas que me han presentado, noto un denominador común: hay motivación de trabajar con grupos específicos de seres vivos, lo cual es un buen ingrediente para llevar a buen término un estudio. Noto también otro aspecto: hay déficit en diseño de muestreo, quizá estoy equivocado, pero es lo que he podido percibir. Ser conscientes del sesgo que introducimos al colectar datos es un paso importante en ciencia. Con los datos de BCI no habrá ese problema, aunque también hay que reconocer que dicho dataset no lo hay en ningún otro lugar. Es probable que en RD no generemos datos así en el futuro cercano, pero por ahora, manejar unos “ajenos” es lo que nos queda, y quizá sirva de norte para algún día establecer una estación biológica en el país (que yo sepa, no la hay).</p>
+<p>Con independencia de lo anterior, espero que el intercambio que tuvimos hasta ahora haya sido provechoso en alguna medida para ustedes. Para mí lo fue sin duda.</p>
+</div>
 </div>
 
 
